--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="flex">
+  <div class="flex-0 relative">
+    <app-schedule-container />
+  </div>
+  <app-sidebar-button />
+  <div class="flex-1 h-screen">
+    <app-chat-container />
+  </div>
+</div>
