--- a/src/app/modules/chat_module/components/offer-chatgpt4/components/list-item/list-item.component.html
+++ b/src/app/modules/chat_module/components/offer-chatgpt4/components/list-item/list-item.component.html
@@ -1,6 +1,6 @@
 <label [for]="id">
   <div
-    class="flex items-center p-2 gap-3 hover:outline-2 hover:outline rounded-md"
+    class="flex items-center p-2 gap-3 hover:outline-2 hover:outline rounded-md cursor-pointer"
   >
     <div class="basis-5">
       <svg
