--- a/src/app/modules/chat_module/components/examples-prompts/examples-prompts.component.html
+++ b/src/app/modules/chat_module/components/examples-prompts/examples-prompts.component.html
@@ -1,3 +1,5 @@
-<div class="grid grid-cols-2 grid-rows-2 align-middle w-[60%] mx-auto gap-3">
+<div
+  class="grid grid-cols-2 grid-rows-2 align-middle w-[60%] mx-auto gap-3 my-5"
+>
   <app-examples *ngFor="let example of infoExamples" [data]="example" />
 </div>
