--- a/src/app/modules/schedule_module/components/schedule_header/schedule.header.html
+++ b/src/app/modules/schedule_module/components/schedule_header/schedule.header.html
@@ -1,4 +1,5 @@
 <div
+  (click)="newChat()"
   class="flex rounded-lg items-center px-2 py-2 hover:bg-white hover:bg-opacity-25 gap-3 cursor-pointer w-[230px]"
 >
   <div class="rounded-full bg-white flex items-center w-[28px] h-[28px]">
