--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@
   --color-primary: #40414f;
   --color-secondary: #c5c5d2;
   --color-bg-popup: #202123;
+  --color-bg-primary: #343541;
+  --color-green: rgb(25, 195, 125);
 }
 
 html,
@@ -22,10 +24,32 @@ body {
 }
 
 body.dark-theme {
-  background-color: #343541;
+  background-color: var(--color-bg-primary);
   color: white;
 }
 
 .hover-color-background {
   background-color: #40414f;
+}
+.customScroll::-webkit-scrollbar {
+  height: 1rem;
+  width: 0.5rem;
+}
+.customScroll::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 100%, 0.1);
+}
+.customScroll::-webkit-scrollbar-thumb {
+  --tw-border-opacity: 1;
+  background-color: rgba(217, 217, 227, 0.8);
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 1px;
+}
+.customScroll::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 9999px;
+}
+
+.customScroll:hover::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 50%, 0.808);
 }
