--- a/src/app/modules/chat_module/components/examples-prompts/components/examples/examples.component.html
+++ b/src/app/modules/chat_module/components/examples-prompts/components/examples/examples.component.html
@@ -1,4 +1,5 @@
 <div
+  (click)="clicked()"
   class="font-semibold cursor-pointer group hover:bg-zinc-500 hover:bg-opacity-30 flex flex-col px-3 py-4 text-sm border border-white border-opacity-15 rounded-xl relative"
 >
   <div>{{ data.title }}</div>
